# make2cmake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: makefile
makefile2cmake/: analysis.cpp  analysis.hpp  fileworker.cpp  fileworker.hpp  info.cpp  info.hpp  main.cpp  makefile2cmake.cpp  makefile2cmake.vcxproj  makefile2cmake.vcxproj.filters  target.cpp  target.hpp  workWithStrings.cpp  workWithStrings.hpp
test_projects/project1/: Makefile
test_projects/project1_Simple/: CMakeLists.txt  Makefile  analysis.cpp
test_projects/project2_Variables/: CMakeLists.txt  Makefile  main.cpp
test_projects/project3_ConditionalComplication/: CMakeLists.txt  Makefile  main.cpp
test_projects/project4_Multifile/: CMakeLists.txt  Makefile  Makefile2  info
test_projects/project5_Compilation/: CMakeLists.txt  Makefile  generate_src.py  src.cpp
