cmake_minimum_required(VERSION 3.29)
project(projectName)
set(CC g++ )
set(CFLAGS -c -Wall )
target_link_libraries(all hello)
target_link_libraries(hello main.o)
target_link_libraries(hello factorial.o)
target_link_libraries(hello hello.o)
add_executable(main.o main.cpp)
add_executable(factorial.o factorial.cpp)
add_executable(hello.o hello.cpp)
