cmake_minimum_required(VERSION 3.29)
project(projectName)
set(CMAKE_C_COMPILER g++)
set(CMAKE_CPP_COMPILER g++)
set(CMAKE_C_FLAGS -c –Wall)
set(CMAKE_CXX_GLAGS -c –Wall)
set(CC g++)
set(CFLAGS -c –Wall )
add_library(hello.o OBJECT  hello.cpp )
target_compile_options(hello.o  -c –Wall)
add_library(factorial.o OBJECT  factorial.cpp )
target_compile_options(factorial.o  -c –Wall)
add_library(main.o OBJECT  main.cpp )
target_compile_options(main.o  -c –Wall)
add_library(hello $<TARGET_OBJECTS:main.o> $<TARGET_OBJECTS:factorial.o> $<TARGET_OBJECTS:hello.o> )

add_executable(general   $<TARGET_OBJECTS:hello>)

